log
Thu 08 Sep 2022 10:58:29 PM UTC: 
 tests:  0|6
total_score: 0/70
337f1d5
Thu 08 Sep 2022 11:06:44 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:46: error: expected expression before ‘HashMap’
   55 |     HashMap* new = (HashMap*)calloc(capacity,HashMap);
      |                                              ^~~~~~~
Compilation failed
3f6055f
Thu 08 Sep 2022 11:07:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:39: error: expected expression before ‘HashMap’
   55 |     HashMap* new = (HashMap*)calloc(1,HashMap);
      |                                       ^~~~~~~
Compilation failed
b2487ee
Thu 08 Sep 2022 11:07:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:39: error: expected expression before ‘HashMap’
   55 |     HashMap* new = (HashMap*)calloc(1,HashMap*);
      |                                       ^~~~~~~
Compilation failed
482abb9
Thu 08 Sep 2022 11:08:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f7577c
Thu 08 Sep 2022 11:10:18 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
3ac68c0
Fri 09 Sep 2022 12:20:37 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0ad1688
Fri 09 Sep 2022 12:28:18 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
7b919a9
